--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,9 @@ project(synthetic_balls)
 cmake_minimum_required(VERSION 2.8)
 aux_source_directory(. SRC_LIST)
 add_executable(${PROJECT_NAME} ${SRC_LIST})
-
+ADD_DEFINITIONS(
+    -std=c++11 # Or -std=c++0x
+    -DDEBUG
+)
+link_directories(/usr/lib64)
+target_link_libraries(synthetic_balls gsl gslcblas)
